<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemDetailActivity" >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/item_name_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Name of the Items in list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RatingBar
            android:id="@+id/rating"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/rank_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/rank"/>
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/resturnat_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/contactDetails"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/address_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="address us kgsdjgsjkdfds ksahjkfdksfhdsfjk sdjfdskj fsjkdfdskfjkdsfdksfjlkdsfjks"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <Button
               android:id="@+id/contact"
               android:layout_width="178dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="10dp"
               android:background="#00E5FF"
               android:text="@string/call" />

           <Button
               android:id="@+id/btnlocation"
               android:layout_width="179dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="10dp"
               android:background="#00E5FF"
               android:text="@string/direction" />
       </LinearLayout>

    </LinearLayout>
</ScrollView>


</LinearLayout>